--- a/content/settings.json
+++ b/content/settings.json
@@ -15,7 +15,7 @@
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "Open Sans",
-  "favicon": "/img/uploads/11.png",
+  "favicon": "/img/uploads/md-360.png",
   "icons_font": "bootstrap-icons",
   "country_code": "BR",
   "secondary_color": "#eba921",
