Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/md360",
   "logo": "/img/uploads/logotipo-sem-fundo-colorido-retangular.png",
-  "name": "MD360",
+  "name": "MKT Place da MD360",
   "short_name": "Loja MD360",
   "lang": "pt_br",
   "currency": "BRL",
