Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -10,7 +10,7 @@
   "repository": "ecomplus-stores/md360",
   "logo": "/img/uploads/logotipo-sem-fundo-colorido-retangular.png",
   "name": "MKT Place da MD360",
-  "short_name": "Loja MD360",
+  "short_name": "MKTPLACE MD360",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
