Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#eba921",
   "icon": "/img/uploads/11.png",
   "store_id": 51459,
-  "description": "Loja MD360",
+  "description": "Somos um MKT Place em Recursos para o Aprendizado. Atuamos em diversos segmentos, e através de parcerias com empresas nacionais atuantes no segmento socioambiental.\n\nSua compra estará beneficiando mães, famílias e o meio ambiente. 5% dos valores de sua compra são destinados ao trabalho social da Faz de Pano, um projeto comunitário feito por mães e mulheres no Rio de Janeiro.",
   "large_icon": "/img/uploads/logotipo-sem-fundo-colorido-retangular.png"
 }
