Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -19,7 +19,7 @@
   "icons_font": "bootstrap-icons",
   "country_code": "BR",
   "secondary_color": "#eba921",
-  "icon": "/img/uploads/11.png",
+  "icon": "/img/uploads/logo-produtos-md-1-.png",
   "store_id": 51459,
   "description": "Somos um MKT Place em Recursos para o Aprendizado em todas as suas etapas. \n\nSomos especialistas e pioneiros no aprendizado para neurodivergentes e alunos com defasem e/ou dificuldades de aprendizado. ",
   "large_icon": "/img/uploads/logotipo-sem-fundo-colorido-retangular.png"
